--- a/package.json
+++ b/package.json
@@ -14,22 +14,22 @@
     "@grapecity/spread-sheets": "^12.2.5",
     "@grapecity/spread-sheets-pdf": "^12.2.5",
     "@grapecity/spread-sheets-print": "^12.2.5",
-    "@grapecity/spread-sheets-react": "^12.2.5",
+    "@material-ui/core": "^4.6.1",
     "brace": "^0.11.1",
-    "canvas": "^2.6.0",
     "cross-env": "^6.0.3",
+    "deepmerge": "^4.2.2",
+    "domino": "^2.1.3",
     "electron-is-dev": "^1.1.0",
     "file-saver": "^2.0.2",
+    "formik": "^2.0.4",
     "immer": "^4.0.1",
     "jsoneditor": "^7.0.4",
     "jsoneditor-react": "^2.0.0",
     "lodash": "^4.17.15",
-    "mock-browser": "^0.92.14",
     "observable-slim": "^0.1.5",
     "ramda": "^0.26.1",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.1.2"
+    "react-dom": "^16.9.0"
   },
   "scripts": {
     "react-start": "react-scripts start",
@@ -56,10 +56,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "concurrently": "^4.1.2",
-    "electron": "^6.0.11",
-    "electron-builder": "^21.2.0",
-    "wait-on": "^3.3.0"
-  }
+  "devDependencies": {}
 }
